--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 mbed TLS ChangeLog (Sorted per branch, date)
 
+= mbed TLS x.x.x branch released xxxx-xx-xx
+
+Bugfix  
+   * Fix an issue raised by valgrind on 32 bit linux platforms.
+     A possible uninitialized variablewas being used. The fix 
+     involves moving the checking of the variable after it
+     is being set.
+
 = mbed TLS 2.4.1 branch released 2016-12-13
 
 Changes
