--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,9 @@ Bugfix
    * Fix a potential integer overflow in the version verification for DER
      encoded X509 certificates. The overflow would enable maliciously
      constructed certificates to bypass the certificate verification check.
+   * Loop on length to seed, until all desired length is achieved, not to return
+     an error when the desired entropy length is higher than
+     MBEDTLS_ENTROPY_BLOCK_SIZE. Fix for #770.
 
 Changes
    * Added config.h option MBEDTLS_NO_UDBL_DIVISION, to prevent the use of
