Some minor changes
1. Rephrase ChangeLog entry, to specify AES only support.
2. Grammar change in wrap\unwrap API description.
3. REmove space between `return` and opening paranthesis.

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,8 +14,8 @@ API Changes
      facilitate testing and maintenance.
 
 Features
-   * Add Key Wrapping algorithm defined by NIST in SP 800-38F. Supports only
-     Key Wrapping (KW) and Key Wrapping with Padding (KWP) modes.
+   * Add support for key wrapping modes based on AES as defined by
+     NIST SP 800-38F algorithms KW and KWP and by RFC's 3394 and 5649.
 
 = mbed TLS 2.9.0 branch released 2018-04-30
 
